--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "giraffedraft",
-  "version": "0.0.0",
-  "description": "",
+  "name": "shotcaller-website",
+  "version": "1.0.0",
+  "description": "[![Stories in Ready](https://badge.waffle.io/golden-warning/giraffedraft-server.png?label=ready&title=Ready)](https://waffle.io/golden-warning/giraffedraft-server) [![Circle CI](https://circleci.com/gh/golden-warning/giraffedraft-server.png?style=badge)](https://circleci.com/gh/golden-warning/giraffedraft-server)",
   "main": "server.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/concreted/shotcaller-website.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/concreted/shotcaller-website/issues"
+  },
+  "homepage": "https://github.com/concreted/shotcaller-website",
   "dependencies": {
     "angular": "^1.3.1",
     "angular-ui-router": "^0.2.11",
