--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.1"
+    "angular": "~1.3.1",
+    "angular-ui-router": "~0.2.13"
   }
 }
